--- a/app-flask/templates/login.html
+++ b/app-flask/templates/login.html
@@ -37,9 +37,9 @@
                                             </div>
                                         </div>
 
-                                        <a class="btn btn-primary btn-user btn-block" href="/" >
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
