--- a/app-flask/templates/base.html
+++ b/app-flask/templates/base.html
@@ -247,7 +247,7 @@
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                    Reportes
+                                    Alerts Center
                                 </h6>
                                 <!-- Este for recorre una consulta de la bd para mostrar los reportes en las notificaciones -->
                                 
