--- a/app-flask/templates/add-sale.html
+++ b/app-flask/templates/add-sale.html
@@ -2,12 +2,32 @@
 
 {% block title %} Añadir venta {% endblock %}
 
+{% block noti %} 
+{% for reportes in reporte %}  
+                                
+<a class="dropdown-item d-flex align-items-center" href="/home/list_report">
+    <div class="mr-3">
+        <div class="icon-circle bg-{% if reportes['estado'] == 'Leve' %}success
+        {% elif reportes['estado'] == 'Urgente' %}danger
+        {% endif %}warning">
+            <i class="fas fa-file-alt text-white"></i>
+        </div>
+    </div>
+    <div>
+        <div class="small text-gray-500">{{reportes['fecha']}}</div>
+        <span class="font-weight-bold">{{reportes['nombre']}}</span>
+    </div>
+</a>
+
+{% endfor %}
+{% endblock %}
+
 {% block content %} 
 
     <div class="content-page" >
         <div class="container-fluid add-form-list ">
            <div class="row">
-               <div class="col-sm-6">
+               <div class="col-sm-12">
                    <div class="card shadow h-100 py-2">
                        <div class="card-header d-flex justify-content-between ">
                            <div class="header-title">
@@ -15,7 +35,7 @@
                            </div>
                        </div>
                        <div class="card-body">
-                           <form action="" method="" id="formu">
+                           <form action="/home/add_sale" method="POST" id="formu">
                                <div class="row">
 
                                    <div class="col-md-6">                      
@@ -38,13 +58,9 @@
                                         <div class="form-group">
                                             <label>Platillos *</label>
                                             <select id="platillo" name="platillo" class="selectpicker form-control" data-style="py-0">
-
                                                 {% for platillos in platillos %}
-
                                                 <option id="op" value="{{platillos["id"]}}">{{platillos["nombre"]}}</option>
-        
                                                 {% endfor %}
-
                                             </select>
                                         </div> 
                                     </div>     
@@ -68,7 +84,7 @@
                    </div>
                </div>
 
-               <div class="col-6">
+               <!-- <div class="col-6">
                 <p class="lead">Amount Due 2/22/2014</p>
 
                 <div class="table-responsive">
@@ -91,49 +107,15 @@
                     </tr>
                   </table>
                 </div>
-              </div>
-
-
-
+              </div> -->
            </div>
-           <div class="row">
-            <div class="col-lg-12 table-responsive">
-                <table class="table table-striped invoice-template">
-                    <thead>
-                        <tr>
-                          <th>Cantidad</th>
-                          <th>Productos</th>
-                          <th>fecha #</th>
-                          <th>Subtotal</th>
-                        </tr>
-                        </thead>
-                </table>
-              </div>
-           </div>
-
-
 
 
            <script src="{{ url_for('static', filename='js/jquery.min.js')}}"></script>
            <script src="{{ url_for('static', filename='js/invoice.js')}}"></script>
            <script>
 
-            
-            //selecionamos el formulario
-            document.querySelector("#formu").onsubmit = () =>
-            {   
-                //capturamos el mensaje del usuario
-                cantidad = document.querySelector("#cantidad").value
-                platillo = document.querySelector("#op").value
-                fecha = document.querySelector("#fecha").value
-                console.log("fecha: ", fecha)
-
-                chat.rowinvoice(platillo,cantidad,fecha)
-
-                return false;
-            }
-
-            
 
            </script>
+
 {% endblock %}
