--- a/app-flask/templates/base.html
+++ b/app-flask/templates/base.html
@@ -247,7 +247,7 @@
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                    Alerts Center
+                                    Reportes
                                 </h6>
                                 <!-- Este for recorre una consulta de la bd para mostrar los reportes en las notificaciones -->
                                 
@@ -290,19 +290,10 @@
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user}}</span>
                                 <img class="img-profile rounded-circle"
                                     src="https://res.cloudinary.com/moonsystem/image/upload/v1639791627/1_sabj7f.png">
->
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
                                 <a class="dropdown-item"  href="" data-toggle="modal" data-target="#changepassword">
                                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Cambiar contraseña
