--- a/app-flask/templates/add-platillo.html
+++ b/app-flask/templates/add-platillo.html
@@ -2,6 +2,26 @@
 
 {% block title %} Añadir platillos {% endblock %}
 
+{% block noti %} 
+{% for reportes in reporte %}  
+                                
+<a class="dropdown-item d-flex align-items-center" href="/home/list_report">
+    <div class="mr-3">
+        <div class="icon-circle bg-{% if reportes['estado'] == 'Leve' %}success
+        {% elif reportes['estado'] == 'Urgente' %}danger
+        {% endif %}warning">
+            <i class="fas fa-file-alt text-white"></i>
+        </div>
+    </div>
+    <div>
+        <div class="small text-gray-500">{{reportes['fecha']}}</div>
+        <span class="font-weight-bold">{{reportes['nombre']}}</span>
+    </div>
+</a>
+
+{% endfor %}
+{% endblock %}
+
 {% block content %} 
 
 <div class="content-page" >
@@ -42,16 +62,25 @@
                                 <div class="col-md-3">                      
                                     <div class="form-group">
                                         <label>Costo *</label>
-                                        <input type="number" id="costo" name="costo"  min="1" class="form-control" placeholder="Ingrese el nombre del producto" data-errors="Porfavor ingresa el costo." readonly required>
+                                        <input type="number" id="costo" name="costo"  min="1" class="form-control" placeholder="Costo del producto" data-errors="Porfavor ingresa el costo." readonly required>
                                         <div class="help-block with-errors"></div>
-                                        
                                     </div>
                                 </div>
+
                                 <div class="col-md-3" class="mx-auto">  
                                     <hr>
                                     <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-calculator mr-3"></i></i>calcular el costo</a>
                                     <hr>
                                 </div>
+
+                                <div class="col-md-6">                      
+                                    <div class="form-group">
+                                        <label>Precio * (35% de ganancias)</label>
+                                        <input type="number" id="precio2" name="precio2" min="1" class="form-control" placeholder="" data-errors="Porfavor ingresa el nombre." readonly required>
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+
                                 <!-- <a href="/home/add_product" class="btn btn-primary add-list"><i class="fas fa-plus-circle mr-3"></i>Añadir Productos</a> -->
 
                                 <!-- Small modal -->
@@ -75,6 +104,7 @@
                                         
                                                 let carrito = [];
                                                 let total = 0;
+                                                let precio2 = 0;
                                                 const DOMitems = document.querySelector('#items');
                                                 const DOMcarrito = document.querySelector('#carrito');
                                                 const DOMtotal = document.querySelector('#total');
@@ -193,8 +223,10 @@
                                                  */
                                                 function calcularTotal() {
                                                     // Limpiamos precio anterior
-                                                    costo = document.getElementById('costo')
+                                                    costo = document.getElementById('costo');
+                                                    precio2 = document.getElementById('precio2');
                                                     total = 0;
+                                                    total2 = 0;
                                                     // Recorremos el array del carrito
                                                     carrito.forEach((item) => {
                                                         // De cada elemento obtenemos su precio
@@ -202,10 +234,15 @@
                                                             return itemBaseDatos.id === parseInt(item);
                                                         });
                                                         total = total + miItem[0].precio;
+                                                        total2 = (35 / total)* 100 + total
+                                                        console.log('', total2)
+                                                        
                                                     });
                                                     // Renderizamos el precio en el HTML
                                                     DOMtotal.textContent = total.toFixed(2);
                                                     costo.value = total.toFixed(2);
+                                                    precio2.value = total2.toFixed(2);
+                                                    
                                                 }
 
                                                 /**
@@ -225,7 +262,7 @@
                                                 // Inicio
                                                 renderizarProductos();
                                         
-                                            });
+                                                });
                                             }
                                         </script>
                                             
@@ -260,13 +297,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6">                      
-                                    <div class="form-group">
-                                        <label>Precio *</label>
-                                        <input type="number" id="" name="precio" min="1" class="form-control" placeholder="Ingrese el nombre del producto" data-errors="Porfavor ingresa el nombre." required>
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
+
 
                                 <div class="col-md-12">
                                     <div class="form-group">
