--- a/app-flask/templates/list-product.html
+++ b/app-flask/templates/list-product.html
@@ -2,6 +2,26 @@
 
 {% block title %} Lista producto {% endblock %}
 
+{% block noti %} 
+{% for reportes in reporte %}  
+                                
+<a class="dropdown-item d-flex align-items-center" href="/home/list_report">
+    <div class="mr-3">
+        <div class="icon-circle bg-{% if reportes['estado'] == 'Leve' %}success
+        {% elif reportes['estado'] == 'Urgente' %}danger
+        {% endif %}warning">
+            <i class="fas fa-file-alt text-white"></i>
+        </div>
+    </div>
+    <div>
+        <div class="small text-gray-500">{{reportes['fecha']}}</div>
+        <span class="font-weight-bold">{{reportes['nombre']}}</span>
+    </div>
+</a>
+
+{% endfor %}
+{% endblock %}
+
 {% block content %} 
 
 <div class="container-fluid">
@@ -69,11 +89,114 @@
                                <td>
                                   <!-- accion -->
                                   <div class="d-flex align-items-center list-action">
-                                     <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"
+                                     <a class="badge bg-warning mr-2" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"
                                         href="/eliminar_productos/{{productos["id"]}}"><i class="ri-delete-bin-5-line mr-0"></i></a>
                                   </div>
                                </td>
                             </tr>
+
+ <!-- edit producto -->
+ <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+   <div class="modal-dialog" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+       </div>
+       <div class="modal-body">
+
+         <form action="/home/add_product" method="post" data-toggle="validator" autocomplete="off">
+            <div class="row">
+
+                <div class="col-md-12">                      
+                    <div class="form-group">
+                        <label>Nombre *</label>
+                        <input type="text" name="nombre" class="form-control" placeholder="{{productos["nombre"]}}" data-errors="Porfavor ingresa el nombre." required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Costo *</label>
+                        <input type="number" min="1" name="costo" class="form-control" placeholder="ingrese el costo" data-errors="Porfavor ingrese el costo." required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Precio *</label>
+                        <input type="number" min="1" name="precio" class="form-control" placeholder="Ingresa el precio" data-errors="Please Enter Price." required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">                                    
+                    <div class="form-group">
+                        <label>Cantidad *</label>
+                        <input type="number" min="1" name="cantidad" class="form-control" placeholder="Ingresa la cantidad" required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+                <!-- Categoriiias -->
+
+                 <div class="col-md-6">
+                     <div class="form-group">
+                         <label>Categoria *</label>
+
+                         <select name="categoria" class="selectpicker form-control" data-style="py-0">
+
+                         {% for categorias in categorias %}
+
+                         <option value="{{categorias["id"]}}">{{categorias["nombre"]}}</option>
+
+                         {% endfor %}
+
+                         </select>
+                         
+                     </div> 
+                 </div>
+
+
+                <!-- IMAGEEEEEEEEEEEN -->
+                 
+                <input id="url" name="url" hidden>
+
+                <div class="col-md-12">
+                 
+                    <div class="form-group">
+                        <label>Imagen</label>
+                        <input name="imagen" type="file" class="form-control image-file" id="img-uploader" >
+
+                        <!-- <progress id="img-upload-bar" value="0" max="100" style="width: 100%"></progress> -->
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label>Descripcion / Detalles del producto</label>
+                        <input name="descripcion" maxlength="10" placeholder="Descripcion breve del producto" class="form-control" rows="4">
+                    </div>
+                </div>
+
+            </div>                            
+        </form>
+
+
+
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+         <button type="button" class="btn btn-primary">Realizar los cambios</button>
+       </div>
+     </div>
+   </div>
+ </div>
+                            
                               {% endfor %}
 
 
@@ -84,5 +207,10 @@
             </div>
         </div>
 </div>
+
+
+
+ 
+
 
 {% endblock %}
