--- a/app-flask/templates/list_platillo.html
+++ b/app-flask/templates/list_platillo.html
@@ -2,6 +2,26 @@
 
 {% block title %} Lista de platillos {% endblock %}
 
+{% block noti %} 
+{% for reportes in reporte %}  
+                                
+<a class="dropdown-item d-flex align-items-center" href="/home/list_report">
+    <div class="mr-3">
+        <div class="icon-circle bg-{% if reportes['estado'] == 'Leve' %}success
+        {% elif reportes['estado'] == 'Urgente' %}danger
+        {% endif %}warning">
+            <i class="fas fa-file-alt text-white"></i>
+        </div>
+    </div>
+    <div>
+        <div class="small text-gray-500">{{reportes['fecha']}}</div>
+        <span class="font-weight-bold">{{reportes['nombre']}}</span>
+    </div>
+</a>
+
+{% endfor %}
+{% endblock %}
+
 {% block content %} 
 
 <div class="container-fluid">
